[package]
name = "branches"
version = "0.1.0"
authors = ["benja"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
ndarray = "0.15.2"
ndarray-rand = "0.14.0"
itertools = "0.8.0"
ndarray-csv = "0.5.1"
csv = "^1"